Olvidé agregarle esto xd

--- a/hoja06/logistic_regression.ipynb
+++ b/hoja06/logistic_regression.ipynb
@@ -1496,6 +1496,28 @@
     "\n",
     "Los errores en este caso, como ya se ha mencionado, le permiten al modelo aprender, y eso como respuesta al usuario también le indica que el modelo es capaz de continuar aprendiendo, sin embargo, debido a que aquí la mayor cantidad de errores se generan en la casas que no son baratas, una posible opción con la cual se podría entrenar de mejor forma el modelo sería utilizando validación cruzada, así se permite que el modelo se entrene y pruebe con todos los datos a disposición y sea capaz, de que en cada iteración de la validación cruzada, aprenda de sus errores anteriores y los \"enmiende\".\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparación de eficiencia\n",
+    "Compare la eficiencia de los 3 modelos que creó (uno para barata, otro para media y otro para cara) ¿Cuál se demoró más en procesar?¿Cuál se equivocó más?¿Cuál se equivocó menos?¿por qué?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al comparar la eficiencia de procesamiento mediante el tiempo medido por los chunks de ejecución, de los tres modelos de creados, se pudo encontrar que el más rápido de los tres fue el que se creó para las casas de tipo cara, ya que este se tardó tan solo 42ms, a diferencia del modelo para las casa intermedias, el tardo 57ms y el de las casas baratas tardó 183ms. Por lo tal,  en cuanto a tiempo de ejecución, el mejor modelo creado fue para las casas caras.\n",
+    "\n",
+    "Por otro lado, como se puede observar en los apartados anteriores, y como se comentó al evaluar la eficiencia de los modelos, el modelo que menos se equivocó fue el creado para las casas caras, esto puede ser explicado debido a que en el entrenamiento de cada modelo se utilizaron los mismos predictores, sin embargo, en el resumen de dichos modelos se pueden observar que para las casas de tipos intermedia y baratas existen predictores que no aportan información significativa a los modelos, empero, debido a que uno de los objetivos principales de esta hoja era la comparación entre cada uno de los modelos creados, no se eliminaron dichos predictores. \n",
+    "\n",
+    "Por otro lado, algo interesante también a tomar en consideración es que el modelo de las casas caras pudo haber sido el que menos se equivocó debido a que dentro del conjunto de datos es el tipo de casas del cual existen una mayor cantidad de observaciones, a diferencia del modelo en el que más se equivocó al predecir, el cual fue en las casas intermedias, el cual, de las 839 observaciones que se tienen únicamente 106 son intermedias, esto podría explicar que con una poca cantidad de datos, el modelo no es capaz de aprender lo suficientemente bien como para hacer predicciones más acertadas. Esto también se puede ver reflejado al encontrar que el modelo, según la matriz de confusión y el resumen de eficiente obtenido en los apartados anteriores, de las casas baratas es mejor, en cuanto a exactitud que el modelo de casas intermedias, y de igual forma, existe una mayor cantidad de casas baratas que de intermedias en el conjunto de datos.\n",
+    "\n",
+    "Una posible solución para lograr que sin importar la cantidad de datos que se tengan que correspondan a la variable objetivo, el modelo sea capaz de predecir adecuadamente, sería optar por realizar validación cruzada, de con al menos 10 iteraciones o bloques y así no solo se ganratiza que no existe *overfitting* en el modelo, sino también que el modelo está siendo entrenado por todos los datos disponibles dentro del conjunto, y al hacer predicciones aprender de los errores cometidos y logra hacer mejores predicciones futuras. Otra recomendación que si bien no es viable para este conjunto de datos, es contar con una cantidad significativa, aproximidamente un 43% o más del total de observaciones, de observaciones que pertenezcan a la categoría de la variable objetivo, ya que así el modelo será capaz de aprender a reconocer las características de este grupo y podrá hacer mejores predicciones. \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
