No lo había guardado xd

--- a/hoja07/neural_networks.ipynb
+++ b/hoja07/neural_networks.ipynb
@@ -84,61 +84,7 @@
    },
    "source": [
     "# Exploración de los datos\n",
-    "Para el desarrollo de modelos de clasificación y de regresión lineal se cuenta con un conjunto de datos provisto por Kaggle, la cual es una comunidad en línea de científicos de datos, que permite encontrar conjuntos de datos para explorar y construir modelos. El data set a utilizar se conoce como *House Prices: Advance Regression Techniques*, el cual tiene tanto un conjunto de entrenamiento como un conjunto de prueba. En esta hoja se estar utilizando el conjunto de entrenamiento, que cuenta con 81 variables y 1460 observaciones, el cual a su vez un 70% de los datos se utilizará como entrenamiento y un 30% como prueba. \n",
-    "\n",
-    "Se omite el análisis exploratorio del conjunto de datos debido a que ya se ha presentado en hojas de trabajo anteriores "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cell_id": "00006-960ada27-de7a-4100-a3d0-fcac27c7936c",
-    "deepnote_app_coordinates": {
-     "h": 5,
-     "w": 12,
-     "x": 0,
-     "y": 36
-    },
-    "deepnote_cell_height": 382,
-    "deepnote_cell_type": "code",
-    "deepnote_output_heights": [
-     177
-    ],
-    "deepnote_to_be_reexecuted": false,
-    "execution_millis": 486,
-    "execution_start": 1651609374699,
-    "source_hash": "476639fd",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "train = pd.read_csv(\"./train.csv\")\n",
-    "train_shape = train.shape\n",
-    "\n",
-    "# Resumen de los datos\n",
-    "head = train.head().style.set_properties(**{'text-align': 'center'}) \n",
-    "display(head)\n",
-    "del head"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_id": "00005-85b65737-f1ba-42ae-8365-1ee523538ad7",
-    "deepnote_app_coordinates": {
-     "h": 5,
-     "w": 12,
-     "x": 0,
-     "y": 30
-    },
-    "deepnote_cell_height": 246.34375,
-    "deepnote_cell_type": "markdown",
-    "tags": []
-   },
-   "source": [
-    "# Exploración de los datos\n",
-    "Para el desarrollo de modelos de clasificación y de regresión lineal se cuenta con un conjunto de datos provisto por Kaggle, la cual es una comunidad en línea de científicos de datos, que permite encontrar conjuntos de datos para explorar y construir modelos. El data set a utilizar se conoce como *House Prices: Advance Regression Techniques*, el cual tiene tanto un conjunto de entrenamiento como un conjunto de prueba. En esta hoja se estar utilizando el conjunto de entrenamiento, que cuenta con 81 variables y 1460 observaciones, el cual a su vez un 70% de los datos se utilizará como entrenamiento y un 30% como prueba. \n",
+    "Para el desarrollo de modelos de clasificación y de regresión lineal se cuenta con un conjunto de datos provisto por Kaggle, la cual es una comunidad en línea de científicos de datos, que permite encontrar conjuntos de datos para explorar y construir modelos. El data set a utilizar se conoce como *House Prices: Advance Regression Techniques*, el cual tiene tanto un conjunto de entrenamiento como un conjunto de prueba. En esta hoja se estara utilizando el conjunto de entrenamiento, que cuenta con 81 variables y 1460 observaciones, el cual a su vez un 70% de los datos se utilizará como entrenamiento y un 30% como prueba. \n",
     "\n",
     "Se omite el análisis exploratorio del conjunto de datos debido a que ya se ha presentado en hojas de trabajo anteriores "
    ]
